--- a/index.html
+++ b/index.html
@@ -1,174 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>myTunes Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/7a4b62b0a4.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header>
-      <nav class="container">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>myTunes</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Header and Navigation -->
+  <header>
+    <div class="container">
+      <nav>
         <div class="logo">myTunes</div>
-
         <ul>
-          <a href="#hero">
-            <li>Overview</li>
-          </a>
-          <a href="#music">
-            <li>Music</li>
-          </a>
-          <a href="#video">
-            <li>Video</li>
-          </a>
-          <a href="#gift">
-            <li>Gift Cards</li>
-          </a>
+          <li><a href="#overview">Overview</a></li>
+          <li><a href="#music">Music</a></li>
+          <li><a href="#video">Video</a></li>
+          <li><a href="#gift">Gift Cards</a></li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <section class="hero-section" id="hero">
-        <div class="container">
-          <h1>my Tunes</h1>
-          <h3>Your music, movies, and TV shows take center stage.</h3>
-          <p>
-            myTunes is the best way to organize and enjoy the music, movies, and
-            TV shows you already have — and shop for the ones you want. Enjoy
-            all the entertainment myTunes has to offer on your Mac and PC.
-          </p>
-        </div>
-      </section>
-      <section class="music-section" id="music">
-        <div class="container">
-          <h2>
-            <span><i class="fa fa-music"></i></span>
-            Music
-          </h2>
-          <h4>
-            Stream over 45 million songs, ad-free. Or download albums and tracks
-            to listen to offline. All the music in your personal myTunes library
-            — no matter where it came from — lives right alongside the Orange
-            Music catalog. Start your free three-month trial with no commitment,
-            and cancel anytime.
-          </h4>
-          <button class="primary-btn">Start Your Trail Now</button>
+    </div>
+  </header>
 
-          <p>
-            Orange Music is available in myTunes, and for iOS and Android
-            devices.
-          </p>
-          <div class="ipad-iphone-img">
-            <img src="images/ipad-iphone.png" alt="iphone ipad" />
-          </div>
-        </div>
-      </section>
-      <section class="about-music container">
+  <main>
+    <!-- Hero Section -->
+    <section class="hero-section" id="overview">
+      <div class="container">
+        <h1>myTunes</h1>
+        <h3>Your music, movies, and TV shows take center stage.</h3>
+        <p>
+          myTunes is the best way to organize and enjoy the music, movies, and TV shows you already have — and shop for the ones you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
+        </p>
+      </div>
+    </section>
+
+    <!-- Music Section -->
+    <section class="music-section" id="music">
+      <div class="container">
+        <h2>Music</h2>
+        <p>
+          Stream over 45 million songs, ad-free. Or download albums and tracks to listen to offline. All the music in your personal myTunes library — no matter where it came from — lives right alongside the Orange Music catalog. Start your free three-month trial with no commitment, and cancel anytime.
+        </p>
+        <img src="images/ipad-iphone.jpg" alt="Music on iPad and iPhone" class="ipad-iphone-img" />
+        <p>
+          Orange Music is available in myTunes, and for iOS and Android devices.
+        </p>
+        <a href="#" class="primary-btn">Start Your Free Trial</a>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-music">
+      <div class="container">
         <h3>The movie and TV collection you always wished for. Granted.</h3>
         <p>
-          With over 100,000 movies and TV shows to choose from, there’s always
-          something great to watch on myTunes and if you watch on Orange TV 4K,
-          you’ll be able to enjoy a tremendous selection of your favorite
-          content in 4K HDR. So get ready to enjoy episodes of your favorite TV
-          shows or hit movies you’ve been waiting to see — anytime, anywhere.
-          Just tap to play, or even download if you’re going somewhere you won’t
-          have Wi-Fi.
+          With over 100,000 movies and TV shows to choose from, there’s always something great to watch on myTunes and if you watch on Orange TV 4K, you’ll be able to enjoy a tremendous selection of your favorite content in 4K HDR. So get ready to enjoy episodes of your favorite TV shows or hit movies you’ve been waiting to see — anytime, anywhere. Just tap to play, or even download if you’re going somewhere you won’t have Wi-Fi.
         </p>
-        <button class="secondary-btn">Read more</button>
-        <div class="mac-img">
-          <img src="images/mac.png" alt="macbook" />
-        </div>
-      </section>
-      <section class="video-section" id="video">
-        <div class="container">
-          <h3>A world of entertainment. Available wherever you are.</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-            veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo
-            non velit repellat alias saepe inventore repellendus? Molestias
-            suscipit eos tempora? Quae quaerat cumque in veritatis impedit
-            dolorum sapiente recusandae minima quo aperiam quam, excepturi quasi
-            totam ad quas? Ipsam laudantium soluta delectus!
-          </p>
-        </div>
-      </section>
-      <div class="container">
-        <section class="gift-section" id="gift">
-          <div class="gift-card">
-            <img src="images/gift_card.png" alt="gift card" />
-          </div>
-          <div class="gift-content">
-            <h3>Gift Card</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
-              cum explicabo, excepturi eaque commodi minima quas repellendus
-              assumenda facere hic, earum quasi iste asperiores molestiae
-              obcaecati laborum, voluptatum alias velit cupiditate! Quae soluta
-              sapiente quasi, iusto quam magnam doloribus natus quod eius, rerum
-              asperiores aspernatur. Illum neque sequi odit fuga.
-            </p>
-            <p>Already have an Orange MyTunes Music Gift Card?</p>
-            <hr />
-            <div>
-              <button class="secondary-btn">Redeem</button>
-            </div>
-          </div>
-        </section>
       </div>
-    </main>
-    <footer>
-      <section class="footer-upper">
-        <div class="container">
-          <div class="footer-links">
-            <h4>Shop & Learn</h4>
-            <ul>
-              <li>Music</li>
-              <li>Movies</li>
-              <li>Shows</li>
-              <li>Apps</li>
-              <li>Gift Cards</li>
-            </ul>
-          </div>
-          <div class="footer-links">
-            <h4>Orange Store</h4>
-            <ul>
-              <li>Find a Store</li>
-              <li>Today at Orange</li>
-              <li>Financing</li>
-              <li>Orange Camp</li>
-              <li>Order Status</li>
-            </ul>
-          </div>
-          <div class="footer-links">
-            <h4>Education & Business</h4>
-            <ul>
-              <li>Orange & Education</li>
-              <li>Shop for Collage</li>
-              <li>Orange & Business</li>
-              <li>Shop for Business</li>
-              <li>Jobs</li>
-            </ul>
-          </div>
-          <div class="footer-links">
-            <h4>About Orange</h4>
-            <ul>
-              <li>Newsroom</li>
-              <li>Orange Leadership</li>
-              <li>Investors</li>
-              <li>Envents</li>
-              <li>Contact Orange</li>
-            </ul>
-          </div>
+    </section>
+
+    <!-- Video Section -->
+    <section class="video-section" id="video">
+      <div class="container">
+        <h2>A world of entertainment. Available wherever you are.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem veniam nobis, nisi ut expedita, doloribus reprehenderit explicabo non velit repellat alias saepe inventore repellendus? Molestias suscipit eos tempora? Quae quaerat cumque in veritatis impedit dolorum sapiente recusandae minima quo aperiam quam, excepturi quasi totam ad quas? Ipsam laudantium soluta delectus!
+        </p>
+      </div>
+    </section>
+
+    <!-- Gift Card Section -->
+    <section class="gift-section" id="gift">
+      <div class="container gift-content">
+        <h2>Gift Card</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt cum explicabo, excepturi eaque commodi minima quas repellendus assumenda facere hic, earum quasi iste asperiores molestiae obcaecati laborum, voluptatum alias velit cupiditate! Quae soluta sapiente quasi, iusto quam magnam doloribus natus quod eius, rerum asperiores aspernatur. Illum neque sequi odit fuga.
+        </p>
+        <a href="#" class="secondary-btn">Redeem Gift Card</a>
+        <p>Already have an Orange MyTunes Music Gift Card?</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-upper">
+      <div class="container">
+        <div>
+          <h4>myTunes</h4>
+          <p>Your music, movies, and TV shows take center stage.</p>
         </div>
-      </section>
-      <section class="footer-lower">
-        <p>Copyright © 2022 Do Some Coding</p>
-      </section>
-    </footer>
-  </body>
+        <div>
+          <h4>Links</h4>
+          <ul>
+            <li><a href="#overview">Overview</a></li>
+            <li><a href="#music">Music</a></li>
+            <li><a href="#video">Video</a></li>
+            <li><a href="#gift">Gift Cards</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-lower">
+      <p>&copy; 2025 myTunes. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
 </html>
